<resources>
    <string name="app_name">Ngampus Yuk!</string>

    <string name="nama_matkul">Nama Matkul</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="hari">Hari</string>
    <string name="kode_ruangan">Kode Ruangan</string>
    <string name="nama_dosen">Nama Dosen</string>
    <string name="no_hp_dosen">Nomor HP Dosen</string>
    <string name="catatan">Catatan</string>

    <string name="submit">SUBMIT</string>
    <string name="save">SAVE</string>
    <string name="reset">RESET</string>
    <string name="tentang">Aplikasi ini merupakan aplikasi penjadwalan perkuliahan. Dimana mahasiswa dapat mengatur jadwalnya dengan aplikasi ini. Aplikasi ini di sertai pengingat untuk membantu mahasiswa dalam mengetahui jadwal kuliah yang akan berlangsung pada hari tertentu sesuai waktu yan telah di tentukan.</string>

    <string name="developer">"Developer:

     Lu'lu' Al-Maknun
     Fatih Seida
     Muhammad Rizki
     Deden Muhammad Furqon" </string>

    <string name="copyright">Copyright 2018</string>
    <string name="title_activity_dasboard">Dasboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
